[package]
name = "chez-sys"
description = "Rust bindings for embedding the Chez Scheme interpreter and compiler in Rust applications"
repository = "https://github.com/amarmaduke/chez-rs"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Andrew Marmaduke <marmaduke.andrew@gmail.com>"]
keywords = ["chez", "scheme", "ffi"]
categories = ["external-ffi-bindings"]
readme = "README.md"
links = "chez"
edition = "2021"

exclude = [
    "ChezScheme/boot/ta6nt/*",
    "ChezScheme/boot/ta6osx/*",
    "ChezScheme/boot/ta6le/*",
    "ChezScheme/boot/a6nt/*",
    "ChezScheme/boot/a6osx/*",
    "ChezScheme/boot/ti3nt/*",
    "ChezScheme/boot/ti3osx/*",
    "ChezScheme/boot/ti3le/*",
    "ChezScheme/boot/i3osx/*",
    "ChezScheme/boot/i3nt/*",
    "ChezScheme/boot/i3le/*",
    "ChezScheme/boot/arm32le/*",
]

[lib]
name = "chez_sys"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
pkg-config = "0.3.24"
