[package]
name = "chez-sys"
description = "Rust bindings for embedding the Chez Scheme interpreter and compiler in Rust applications"
repository = "https://github.com/amarmaduke/chez-rs"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Andrew Marmaduke <marmaduke.andrew@gmail.com>"]
keywords = ["chez", "scheme", "ffi"]
categories = ["external-ffi-bindings"]
readme = "README.md"
links = "chez"
edition = "2021"

[lib]
name = "chez_sys"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
pkg-config = "0.3.24"
